--- a/css/fs-styles.css
+++ b/css/fs-styles.css
@@ -382,6 +382,10 @@ select {
   font-size: 2.5rem;
 }
 
+input[type="checkbox"] {
+  width: 2rem;
+}
+
 textarea {
   height: 12rem;
   border: 2px solid gray;
@@ -417,10 +421,13 @@ div.showcase {
 ul.footer-text {
   display: flex;
   justify-content: flex-start;
+  gap: 4rem;
 }
 ul.social-link {
   display: flex;
-  justify-content: flex-end;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  gap: 2rem;
 }
 
 footer {
@@ -433,7 +440,26 @@ footer {
 }
 
 .footer-parent {
-  padding-top: 3%;
-  padding-left: 4%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 3rem;
+}
+
+.footer-links {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+}
+.footer-text li,
+.social-link i {
+  color: #fff;
+  font-size: 3rem;
+}
+
+.footer-copyright {
+  font-size: 2.5rem;
 }
 /* END : Page footer*/
