--- a/css/fs-styles.css
+++ b/css/fs-styles.css
@@ -1,160 +1,3 @@
-/* START : Page style - common to all sections*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Kanit", sans-serif;
-}
-
-:root {
-  font-size: 62.5%;
-}
-
-p,
-li,
-a,
-label,
-option {
-  font-size: 2rem;
-  color: gray;
-}
-
-section {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  margin: 6rem 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-h1 {
-  font-size: 9.5rem;
-  color: #fff;
-  text-transform: uppercase;
-}
-
-h1 span {
-  color: #f63854;
-}
-
-h2 {
-  font-size: 6rem;
-  color: gray;
-  text-transform: uppercase;
-  margin: 2rem auto 2rem auto;
-}
-
-h2::after {
-  content: "";
-  color: #f63854;
-  display: block;
-  border-bottom: solid;
-  margin: 30px 65px;
-}
-
-h3 {
-  text-align: center;
-  padding: 20px;
-  font-size: 3rem;
-  text-transform: uppercase;
-  color: gray;
-}
-
-h4 {
-  text-align: center;
-  padding-bottom: 10px;
-  color: #f63854;
-  font-size: 40px;
-  font-weight: 500;
-}
-
-h4 span {
-  font-size: 15px;
-  color: gray;
-  font-weight: normal;
-}
-/* End : Page style - common to all sections*/
-
-/* START : Page header*/
-header {
-  width: 100%;
-  height: 80vh;
-  background: url("../assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg")
-    no-repeat center;
-  background-size: cover;
-  position: relative;
-}
-.header-layer {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.7);
-  width: 100%;
-  height: 100%;
-}
-.header-main {
-  display: flex;
-  flex-direction: column;
-  margin: 16vh 20%;
-}
-ul.nav-items {
-  display: flex;
-  justify-content: flex-end;
-  gap: 1.5rem;
-}
-h1.header-main-heading {
-  display: flex;
-  flex-direction: column;
-}
-
-.navigation {
-  margin: 2.5rem;
-  position: sticky;
-  top: 0px;
-}
-
-.nav-item-link {
-  color: #fff;
-  text-transform: uppercase;
-  font-size: 3rem;
-}
-
-a.btn,
-button.btn {
-  display: inline-block;
-  color: white;
-  margin-right: 15px;
-  padding: 15px 25px;
-  background: #f63854;
-  border-radius: 64px;
-  border: 1px solid #f63854;
-  transition: transform 0.3s, color 0.3s, background-color 0.3s;
-  font-size: 3rem;
-}
-
-a.btn-empty {
-  color: #f63854;
-  background-color: transparent;
-}
-
-a.btn:hover {
-  transform: scale(1.2);
-}
-
-a.btn-empty:hover {
-  color: white;
-  background: #f63854;
-}
-/* END : Page header*/
-
 /* START : Features section*/
 div.container-parent {
   display: flex;
@@ -292,6 +135,7 @@ div.card {
   padding: 25px 10px 15px;
   line-height: 30px;
   box-shadow: rgba(27, 38, 49, 0.1) 0px 10px 22px 10px;
+  transition: transform 0.2s;
 }
 
 .card-pricing {
@@ -336,9 +180,10 @@ div.cards-container {
 
 /* START : Contact section*/
 
-.section__contact {
+section.section__contact {
   background-color: #212529;
   height: 100vh;
+  margin: 6rem 0 0 0;
 }
 
 div.form-container-parent {
