--- a/css/fs-styles.css
+++ b/css/fs-styles.css
@@ -1,17 +1,3 @@
-/* --Break point defination--
-  1. Small and large Mobiles
-     320px - 600px
-
-  2. Small Devices (Tablet & Large Phone)
-     600px - 768px
-
-  3. Medium devices (landscape tablets and small laptops)
-     768px - 1200px
-
-  4. Extra large devices (large laptops and desktops)
-     1200px and up
-*/
-
 /* START : Features section*/
 div.container-parent {
   display: flex;
@@ -19,15 +5,17 @@ div.container-parent {
   justify-content: center;
   align-items: center;
   width: 100%;
+  flex-wrap: wrap;
+  margin: 0 2rem;
 }
 
 div.container {
-  box-shadow: 0 10px 22px 10px rgba(27, 38, 49, 0.1);
-  padding: 20px;
+  box-shadow: 0 1rem 2.2rem 1rem rgba(27, 38, 49, 0.1);
+  padding: 2rem;
   display: flex;
   flex-direction: column;
-  height: 320px;
-  width: 500px;
+  height: 32rem;
+  width: 50rem;
 }
 
 .icon {
@@ -50,7 +38,8 @@ div.container {
   flex-direction: row;
   gap: 4rem;
   align-items: center;
-  margin: 0 2rem;
+  padding: 0 4rem;
+  width: 100%;
 }
 
 .follow-steps-container {
@@ -82,17 +71,25 @@ div.container {
   font-size: 2.5rem;
 }
 
+.follow_image_container {
+  width: 40%;
+}
+
+.follow_image_container img {
+  width: 100%;
+}
+
 /* End : Follow section*/
 
 /* START : Reviews section*/
 
 .section__reviews {
   width: 100%;
-  height: 70vh;
+  /*height: 70vh;*/
   background: url("../assets/images/foodiesfeed.com_pizza-ready-for-baking.jpg")
     no-repeat center;
   background-size: cover;
-  position: relative;
+  /*position: relative;*/
 }
 
 .container-parent__reviews {
@@ -105,14 +102,15 @@ div.container {
 }
 
 .container-parent__reviews-layer {
-  position: absolute;
+  /*position: absolute;
   top: 0;
-  left: 0;
+  left: 0;*/
   background-color: rgba(0, 0, 0, 0.7);
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding-bottom: 3rem;
 }
 
 .card__review {
@@ -125,8 +123,8 @@ div.container {
 }
 
 .card__review-img {
-  width: 80px;
-  height: 80px;
+  width: 8rem;
+  height: 8rem;
   border-radius: 50%;
 }
 
@@ -145,12 +143,12 @@ div.container {
 /* Start : Price section*/
 div.card {
   border-radius: 4%;
-  width: 350px;
+  width: 35rem;
   border: 2px solid lightgray;
   margin: 3em 0em;
-  padding: 25px 10px 15px;
-  line-height: 30px;
-  box-shadow: rgba(27, 38, 49, 0.1) 0px 10px 22px 10px;
+  padding: 2.5rem 1rem 1.5rem;
+  line-height: 3rem;
+  box-shadow: rgba(27, 38, 49, 0.1) 0px 1rem 2.2rem 1rem;
   transition: transform 0.2s;
 }
 
@@ -182,7 +180,7 @@ div.card:hover {
 .signup-button {
   text-align: center;
   position: relative;
-  top: 45px;
+  top: 4.5rem;
 }
 
 div.cards-container {
@@ -190,6 +188,7 @@ div.cards-container {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  align-content: center;
 }
 
 /* End : Price section*/
@@ -198,7 +197,7 @@ div.cards-container {
 
 section.section__contact {
   background-color: #212529;
-  height: 100vh;
+  min-height: 100vh;
   margin: 6rem 0 0 0;
 }
 
@@ -330,6 +329,86 @@ footer {
 }
 /* END : Page footer*/
 
+/* --Break point defination--
+  1. Small and large Mobiles
+     320px - 600px
+
+  2. Small Devices (Tablet & Large Phone)
+     600px - 768px
+
+  3. Medium devices (landscape tablets and small laptops)
+     768px - 900px
+
+  4. Large devices (medium laptops and small desktops)
+    900px - 1200px
+
+  5. Extra large devices (large laptops and desktops)
+     1200px and up
+*/
+
 /* START : Media Queries */
 
+@media screen and (max-width: 599px) {
+  :root {
+    font-size: 34%;
+  }
+  .footer-links {
+    flex-direction: column;
+    gap: 3rem;
+  }
+  ul.footer-text {
+    justify-content: center;
+  }
+  .header-main-btn-group {
+    flex-direction: column;
+  }
+  .follow_image_container {
+    width: 60%;
+  }
+}
+
+@media screen and (min-width: 600px) and (max-width: 767px) {
+  :root {
+    font-size: 47%;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 899px) {
+  :root {
+    font-size: 54%;
+  }
+}
+
+@media screen and (min-width: 900px) and (max-width: 1199px) {
+  :root {
+    font-size: 57%;
+  }
+}
+
+@media screen and (max-width: 899px) {
+  .container-parent__reviews {
+    flex-direction: column;
+  }
+  .container-parent {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .container-parent__follow {
+    flex-direction: column;
+  }
+  .cards-container {
+    flex-direction: column;
+  }
+  div.form-container-parent {
+    flex-direction: column;
+  }
+  .contact-form {
+    width: 80%;
+  }
+  .contact-video {
+    width: 70%;
+  }
+}
 /* END : Media Queries */
